Allow <pre> sections to wrap Fix highlighting issue in code sections

--- a/css/screen.css
+++ b/css/screen.css
@@ -22,6 +22,14 @@ body {
   text-align: center;
 }
 
+pre {
+  white-space: -moz-pre-wrap; /* Mozilla, supported since 1999 */
+  white-space: -pre-wrap; /* Opera 4 - 6 */
+  white-space: -o-pre-wrap; /* Opera 7 */
+  white-space: pre-wrap; /* CSS3 - Text module (Candidate Recommendation) http://www.w3.org/TR/css3-text/#white-space */
+  word-wrap: break-word; /* IE 5.5+ */
+}
+
 h1 {
   margin-top: 1em;
   margin-bottom: 1em;
