--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,6 +1,6 @@
 .highlight  { background: #000000; color: #ffffff; padding: 4px; width: 90%;}
 .highlight .c { color: #999988; font-style: italic } /* Comment */
-.highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
+.highlight .err { color: #a61717; xbackground-color: #e3d2d2 } /* Error ALEX: tweaked for Scala console */
 .highlight .k { font-weight: bold } /* Keyword */
 .highlight .o { font-weight: bold } /* Operator */
 .highlight .cm { color: #999988; font-style: italic } /* Comment.Multiline */
